# paw_pals_quiz

./: .env.prod.example  .gitignore  README.Docker.md  README.Production.md  docker-compose.prod.yml  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  breed_info.json  breed_info_with_origin.json  breeds.json  gunicorn.conf.py  pyproject.toml  start.sh  test_scheduler.py  translate_origin.sh
backend/api/: admin.py  apps.py  models.py  scheduler.py  serializers.py  tasks.py  urls.py  version.py  views.py
backend/api/management/commands/: create_fake_data.py  create_test_user.py  (+2 more)
backend/api/migrations/: 0001_initial.py  0002_breed_slug_question.py  0003_alter_breed_name_zh.py  0004_alter_question_image_url.py  0005_gamesession_user_question_breed_slug_roundrecord_and_more.py  0006_roundrecord_correct_answer_slug_roundrecord_score.py  0007_alter_gamesession_user_playerinfo_delete_user.py  0008_rename_correct_answer_slug_roundrecord_correct_slug_and_more.py  0009_roundrecord_choices.py  0010_breed_introduction_en_breed_introduction_zh_and_more.py  0011_remove_roundrecord_choices_roundrecordbreedchoice.py  0012_alter_playerinfo_nickname.py  0013_gamesession_avg_accuracy_gamesession_is_finished.py  0014_remove_gamesession_is_finished.py  0015_globalstat_breed_correct_attempts_and_more.py  0016_globalstat_total_correct.py  0017_passwordresettoken.py
backend/api/services/: __init__.py  breed.py  dog.py  game_session.py  player.py  question.py  redis.py  round_record.py
backend/config/: settings.py
(+42 files in other folders)
